<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InternetProblemActivity">

    <LinearLayout
        android:id="@+id/linearWifiOffHolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/wifi_off_logo"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/ic_baseline_wifi_off_24"
            android:contentDescription="@string/no_internet" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/no_internet_conn"
            android:textSize="24sp" />

        <Button
            android:id="@+id/internetProblemRetryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:backgroundTint="#18AC5E" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>