<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/infoTxtReport"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity">

    <ImageView
        android:id="@+id/reportLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/namereport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/reportLogo"
        app:layout_constraintStart_toEndOf="@+id/reportLogo"
        app:layout_constraintTop_toTopOf="@+id/reportLogo" />

    <TextView
        android:id="@+id/sloganreport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/school_slogan"
        app:layout_constraintBottom_toBottomOf="@+id/reportLogo"
        app:layout_constraintStart_toStartOf="@+id/namereport"
        app:layout_constraintTop_toBottomOf="@+id/namereport" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/email_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/etSubject"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="Type a Subject..."
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Describe your issue..."
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/reportBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Report Problem" />

            <TextView
                android:id="@+id/noteTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="*Note: This feature is to only report non-functional features within the app. In case of any queries, please messege on query portal."
                android:textColor="#FF0000" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>